# tme

./: LICENSE  README.md  pyproject.toml
docs/: MANUSCRIPT_MAPPING.md
inputs/: controller_inputs.json  demon_inputs.json  figure1_examples.json  nero_entropy_provenance.json  symbolic_entropy_inputs.json
outputs/: appendix_c_reproduction.json  figure1_numbers.csv  figure1_numbers.json  manuscript_constants.json  table1_velocity_demon.csv  table1_velocity_demon.tex  table2_scale.csv  table2_scale.tex
scripts/: make_all.py  make_figure1_numbers.py  make_table_numbers.py
src/tme/: __init__.py  controllers.py  demons.py  io_utils.py  scale.py  symbolic.py  tables.py
tests/: test_demons.py  test_scale.py  test_symbolic.py
